cmake_minimum_required(VERSION 3.15)
project(Act3 C)

set(CMAKE_C_STANDARD 99)

add_executable(Act3_1 Act3_1.c)
add_executable(Act3_2_1 Act3_2_1.c)
add_executable(Act3_2_2 Act3_2_2.c)
add_executable(Act3_2_3 Act3_2_3.c)
add_executable(Act3_3_1 Act3_3_1.c)
add_executable(Act3_3_2 Act3_3_2.c)
add_executable(Act3_3_3 Act3_3_3.c)
add_executable(Act3_3_4 Act3_3_4.c)
add_executable(Act3_3_5 Act3_3_5.c)
add_executable(Act3_3_6 Act3_3_6.c)
add_executable(Act3_3_7 Act3_3_7.c)
add_executable(Act3_3_8 Act3_3_8.c)
add_executable(Original Act3_1_original.c)