cmake_minimum_required(VERSION 3.15)
project(Act4 C)

set(CMAKE_C_STANDARD 99)

add_executable(Act4_1 Act4_1.c)
add_executable(Act4_2_1 Act4_2_1.c)
add_executable(Act4_2_2 Act4_2_2.c)
add_executable(Act4_3_1 Act4_3_1.c)
add_executable(Act4_3_2 Act4_3_2.c)
add_executable(Act4_4_1 Act4_4_1.c)
add_executable(Act4_4_2 Act4_4_2.c)
add_executable(Act4_4_3 Act4_4_3.c)
add_executable(Act4_4_4 Act4_4_4.c)
add_executable(Act4_4_5 Act4_4_5.c)
add_executable(Act4_4_6 Act4_4_6.c)