cmake_minimum_required(VERSION 3.15)
project(Act5 C)

set(CMAKE_C_STANDARD 99)

add_executable(act5-1 act5-1.c)
add_executable(act5-2-1-1 act5-2-1-1.c)
add_executable(act5-2-1-2 act5-2-1-2.c)
add_executable(act5-2-2-1 act5-2-2-1.c)
add_executable(act5-2-2-2 act5-2-2-2.c)
add_executable(act5-3-1 act5-3-1.c)
add_executable(act5-3-2 act5-3-2.c)
add_executable(act5-3-3 act5-3-3.c)
add_executable(act5-3-4 act5-3-4.c)
add_executable(act5-3-5 act5-3-5.c)