cmake_minimum_required(VERSION 3.15)
project(Act6 C)

set(CMAKE_C_STANDARD 99)

add_executable(Act6-1 act6-1.c)
add_executable(act6-2-1-1 act6-2-1-1.c)
add_executable(act6-2-1-2 act6-2-1-2.c)
add_executable(act6-2-2-1 act6-2-2-1.c)
add_executable(act6-2-2-2 act6-2-2-2.c)
add_executable(act6-3-1 act6-3-1.c)
add_executable(act6-3-2 act6-3-2.c)
add_executable(act6-3-3 act6-3-3.c)
add_executable(act6-3-4 act6-3-4.c)