cmake_minimum_required(VERSION 3.15)
project(Act7 C)

set(CMAKE_C_STANDARD 99)

add_executable(act7-1 act7-1.c)
add_executable(act7-2-1 act7-2-1.c)
add_executable(act7-2-2 act7-2-2.c)
add_executable(act7-3-1 act7-3-1.c)
add_executable(act7-3-2 act7-3-2.c)
add_executable(act7-3-3 act7-3-3.c)
add_executable(act7-3-4 act7-3-4.c)
add_executable(act7-3-5 act7-3-5.c)